bottom border on mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -392,7 +392,7 @@ img {
 
 @media only screen and (max-width: 780px) {
     .project_images {
-        padding-bottom: 250px;
+        padding-bottom: 150px;
     }
 }
 
@@ -431,10 +431,10 @@ img {
 
 @media only screen and (max-width: 780px) {
     .fujifilm_images {
-        padding-bottom: 250px;
+        padding-bottom: 150px;
     }
 
     .todrownaflame_images {
-        padding-bottom: 250px;
+        padding-bottom: 150px;
     }
 }
